--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
-<h1>About this project</h1>
+<h1 class="title">About this project</h1>
 <p>This project was created for my sister-in-law, Mariah!</p>
