--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Tasks</title>
+  <title>Personal Task Manager</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 	<%= render "layouts/header" %>
-	<%= yield %>
+	<div class='section'>
+		<div class='container'>
+			<div class='notification'>
+				<%= yield %>
+			</div>
+		</div>	
+	</div>
+
 
 </body>
 </html>
