--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,6 @@
-<h1 class="title">Personal Task Manager</h1>
+<div class="columns is-mobile">
+	<div class="column is-8 is-offset-2">
+		<h1 class="has-text-centered title">Personal Task Manager</h1>
+		<h2 class="has-text-centered subtitle">Manage your tasks in a timely fashion.</h2>
+	</div>
+</div>
