--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,16 +23,21 @@
 
     <div class="nav-item">
       <div class="field is-grouped">
+				<% if current_user %>
+				<p class='control'>
+					<%= link_to "Settings", edit_user_registration_path, class: 'button is-info' %>
+				</p>
+				<p class='control'>
+					<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'button is-danger' %>
+				</p>
+				<% else %>
         <p class="control">
-          <a class="button is-info">
-            <span>Signup</span>
-          </a>
+					<%= link_to "Signup", new_user_registration_path, class: "button is-info" %>
         </p>
         <p class="control">
-          <a class="button is-primary">
-            <span>Login</span>
-          </a>
+					<%= link_to "Login", new_user_session_path, class: 'button is-primary' %>
         </p>
+				<% end %>
       </div>
     </div>
   </div>
