--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 </head>
 <body>
 	<%= render "layouts/header" %>
+	<p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 	<div class='section'>
 		<div class='container'>
 			<div class='notification'>
