--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,8 @@
       <div class="field is-grouped">
 				<% if current_user %>
 				<p class='control'>
-					<%= link_to "Settings", edit_user_registration_path, class: 'button is-info' %>
+					<%= link_to "<i class='fa fa-cog fa-spin fa-fw'></i>".html_safe, edit_user_registration_path, class: 'button is-info' %>
+					
 				</p>
 				<p class='control'>
 					<%= link_to "Log Out", destroy_user_session_path, method: :delete, class: 'button is-danger' %>
