--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,11 +1,14 @@
 <%= form_for @task do |f| %>
 
 	<%= f.label :content %>:
-	<%= f.text_field :content %>
+	<%= f.text_field :content, required: true %>
+
+	<%= f.label :description %>:
+	<%= f.text_field :description %>
 
 	<%= f.label :priority %>:
-	<%= f.number_field :priority %>
+	<%= f.number_field :priority, required: true %>
 
-	<%= f.submit %>
+	<%= f.button :submit %>
 
 <% end %>
