--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,29 +1,25 @@
-<h1 class='title'>Listing Tasks</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Content</th>
-      <th>User</th>
-			<th>Priority</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.content %></td>
-        <td><%= task.user_id %></td>
-				<td><%= task.priority %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Task', new_task_path %>
+<% @tasks.each do |task| %>
+	<div class='box'>
+		<article class='media'>
+			<div class='media-content'>
+				<div class='content'>
+					<p>
+						<strong><%= task.content %></strong> <small>Priority: <%= task.priority %></small>
+						<br>
+						<%= task.description %>
+					</p>
+				</div>
+				<nav class='level is-mobile'>
+					<div class='level-left'>
+						<a class='level-item'>
+							<%= link_to "<i class='fa fa-pencil-square-o'></i>".html_safe, edit_task_path(task) %>
+						</a>
+						<a class='level-item'>
+							<%= link_to "<i class='fa fa-trash'></i>".html_safe, task, method: :delete, data: { confirm: 'Are you sure?' } %>
+						</a>
+					</div>
+				</nav>
+			</div>
+		</article>
+	</div>
+<% end %>
