--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,44 @@
-<h2>Sign up</h2>
+<div class='columns'>
+	<div class='column is-half'>
+		<h2 class='title'>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+		<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  	<%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+		<div class="field">
+			<label class='label'>Email</label>
+			<p class='control'>
+				<%= f.email_field :email, autofocus: true, class: 'input' %>
+			</p>
+		 </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+		<div class="field">
+			<label class='label'>Password 
+				<% if @minimum_password_length %>
+					<em>(<%= @minimum_password_length %> characters minimum)</em>
+				<% end %>
+			</label>
+			<p class='control'>
+				<%= f.password_field :password, autocomplete: "off", class: 'input' %>
+			</p>
+		</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+		<div class="field">
+			<label class='label'>Password Confirmation</label>
+			<p class='control'>
+				<%= f.password_field :password_confirmation, autocomplete: "off", class: 'input' %>
+			</p>
+		</div>
+	
+  	<div class="actions">
+    	<%= f.submit "Sign up", class: 'button is-info' %>
+  	</div>
+		
+		<% end %>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+		<br>
 
-<%= render "devise/shared/links" %>
+		<%= render "devise/shared/links" %>
+		
+	</div>
+</div>
