--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,14 +6,14 @@
   	<%= devise_error_messages! %>
 
 		<div class="field">
-			<label class='label'>Email</label>
+			<label class='label'><%= f.label :email %></label>
 			<p class='control'>
 				<%= f.email_field :email, autofocus: true, class: 'input' %>
 			</p>
 		 </div>
 
 		<div class="field">
-			<label class='label'>Password 
+			<label class='label'><%= f.label :password %> 
 				<% if @minimum_password_length %>
 					<em>(<%= @minimum_password_length %> characters minimum)</em>
 				<% end %>
@@ -24,7 +24,7 @@
 		</div>
 
 		<div class="field">
-			<label class='label'>Password Confirmation</label>
+			<label class='label'><%= f.label :password_confirmation %></label>
 			<p class='control'>
 				<%= f.password_field :password_confirmation, autocomplete: "off", class: 'input' %>
 			</p>
